--- a/embed_slide_up.css
+++ b/embed_slide_up.css
@@ -6,8 +6,8 @@
   }
   
   .modal {
-    width: 200px;
-    height: 200px;
+    /*width: 200px;*/
+    /*height: 200px;*/
     /*background-color: #2abd89;*/
     /* animation: fadeIn 1s, slideIn .8s linear; */
     
